--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-ts-typewriter": "^0.1.8-b",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
