--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.4"
+  },
+  "engines": {
+    "npm": "8.x"
   }
 }
