added typing efffect to Home page

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "NODE_OPTIONS='--openssl-legacy-provider' next build && next export",
   },
   "eslintConfig": {
     "extends": [
